# repo-weaver

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Cargo.toml.legacy  GEMINI.md  PRD.md
.github/workflows/: release-plugin.yml
.specify/memory/: constitution.md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs  prompts.rs
crates/cli/src/commands/: apply.rs  check.rs  describe.rs  init.rs  list.rs  mod.rs  module.rs  plan.rs  plugins.rs  run.rs
crates/cli/tests/integration/: ai_ensure.rs  apply.rs  check.rs  common.rs  describe.rs  examples.rs  git_ensures.rs  includes.rs  k3s_nebula.rs  list.rs  main.rs  module.rs  npm_ensure.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  config.rs  engine.rs  lib.rs  lockfile.rs  logging.rs  module.rs  secret.rs  state.rs  template.rs
crates/core/src/config/: loader.rs
crates/core/src/ensure/: ai.rs  git.rs  mod.rs  npm.rs  plugin_wrapper.rs
crates/core/src/plugin/: cache.rs  ensure_wasm.rs  fetcher.rs  mod.rs  resolver.rs  wasm.rs
crates/core/tests/: ensure_plugin_test.rs
crates/ops/: Cargo.toml
crates/ops/src/: fs.rs  git.rs  lib.rs  npm.rs
docs/: GAPS.md  PLUGIN_DEVELOPMENT.md  wasmtime.md
examples/ai-patch/: weaver.yaml
examples/ai-patch/modules/ai-module/: weaver.module.yaml
examples/git-module/: .gitignore  weaver.yaml
examples/npm-script/: weaver.yaml
examples/npm-script/app/: package.json
examples/npm-script/modules/npm-module/: weaver.module.yaml
examples/wasm/rust-basic/: Cargo.toml  README.md
examples/wasm/rust-basic/src/: lib.rs
plugins/aws-ssm/: Cargo.toml
plugins/aws-ssm/src/: lib.rs
plugins/npm-script/: Cargo.toml
plugins/npm-script/src/: bindings.rs  lib.rs
scripts/: build-plugins.sh  release-plugin.sh
specs/001-repo-weaver-mvp/: data-model.md  exec-plugin.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-repo-weaver-mvp/checklists/: api.md  requirements-quality.md  requirements.md  ux.md
specs/001-repo-weaver-mvp/contracts/: cli.md  weaver.schema.json  weaver.yaml.md  wit.md
specs/002-gap-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gap-analysis/checklists/: requirements.md
specs/002-gap-analysis/contracts/: cli-describe.md  cli-list.md  cli-module.md
specs/003-plugin-management-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-plugin-management-system/checklists/: build-dist.md  requirements.md  resolution-caching.md  ux-config.md
specs/003-plugin-management-system/contracts/: api.md
src/: cli.rs  config.rs  main.rs
src/engine/: executor.rs  planner.rs
src/ops/: fs.rs  git.rs  mod.rs  native.rs
src/utils/: tpl.rs
tests/: integration.rs
tests/fixtures/modules/k3s-nebula/: weaver.module.yaml
tests/fixtures/modules/k3s-nebula/files/terraform/: main.tf
tests/fixtures/modules/k3s-nebula/templates/: Taskfile.yml
tests/fixtures/simple/: weaver.yaml
wit/: plugin.wit
