[workspace]
resolver = "2"
members = ["crates/cli", "crates/core", "crates/ops", "plugins/aws-ssm"]
default-members = ["crates/cli", "crates/core", "crates/ops"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
indicatif = "0.18.3"
tera = "1.19.1"
wasmtime = { version = "18.0.0", features = ["component-model"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yml = "0.0.12"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
assert_cmd = "2.1.1"
predicates = "3.1.3"
walkdir = "2.4.0"
repo-weaver-core = { path = "crates/core" }
repo-weaver-ops = { path = "crates/ops" }
