[package]
name = "repo-weaver"
version.workspace = true
edition.workspace = true
default-run = "repo-weaver"

[[bin]]
name = "repo-weaver"
path = "src/main.rs"

[dependencies]
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
repo-weaver-core.workspace = true
repo-weaver-ops.workspace = true
tera.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
