[package]
name = "repo-weaver-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
tera.workspace = true
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
home = "0.5.9"
sha2 = "0.10.9"
urlencoding = "2.1.3"
glob = "0.3"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.41.1", features = ["time"] }
chrono = "0.4.38"
repo-weaver-ops.workspace = true
