[package]
name = "npm-script-plugin"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "weaver:plugin"

[package.metadata.component.target]
world = "ensure-provider"
path = "../../wit"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.50.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
